# rust-webapp-template-api

./: README.md
client/: Cargo.toml
client-native/: Cargo.toml
client-native/src/: main.rs
client/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/api/: chat.rs  mod.rs  worker.rs
server/: Cargo.toml
server/src/: main.rs  state.rs
worker/: Cargo.toml
worker/src/: lib.rs
