[package]
name = "common"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[features]
worker = []

[dependencies]
mezzenger = "0.1.2"
futures = "0.3.25"
serde = { version = "1.0.151", features = ["derive"] }
zzrpc = "0.1.1"

num-traits = "0.2.15"
num-bigint = { version = "0.4.3", features = ["serde"] }
