[package]
name = "common"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[features]
worker = []

[dependencies]
mezzenger = "0.1.4"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
zzrpc = "0.1.3"

num-traits = "0.2.16"
num-bigint = { version = "0.4.4", features = ["serde"] }
